--- a/zxc.html
+++ b/zxc.html
@@ -21,7 +21,7 @@
 		 			</path>
 		 		</svg>
 		 			</a>
-		 		<img src="./images/logo.jpg" imgfield="img" style="max-width: 300px; width: 300px">
+		 		<img src="./logo.jpg" imgfield="img" style="max-width: 300px; width: 300px">
                    
  		<div class="container">
  	</div>
@@ -50,7 +50,7 @@ body {
 	<li class="product-wrapper">
 		<a href="" class="product">
 			 <div class="product-photo">
-	<img src="images/foto.jpg" alt="">
+	<img src="./foto.jpg" alt="">
 </div>
 	    </a>
 	</li>
@@ -59,7 +59,7 @@ body {
 	<li class="product-wrapper">
 		<a href="" class="product">
 			 <div class="product-photo">
-	<img src="images/foto.jpg" alt="">
+	<img src="./foto.jpg" alt="">
 </div>
 	    </a>
 	</li>
@@ -68,7 +68,7 @@ body {
 	<li class="product-wrapper">
 		<a href="" class="product">
 			 <div class="product-photo">
-	<img src="images/foto.jpg" alt="">
+	<img src="./foto.jpg" alt="">
 </div>
 	    </a>
 	</li>
@@ -77,7 +77,7 @@ body {
 	<li class="product-wrapper">
 		<a href="" class="product">
 			 <div class="product-photo">
-	<img src="images/foto.jpg" alt="">
+	<img src="./foto.jpg" alt="">
 </div>
 	    </a>
 	</li>
